--- a/Kobu_prototype/app/src/main/res/layout/activity_bluetooth_connect.xml
+++ b/Kobu_prototype/app/src/main/res/layout/activity_bluetooth_connect.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
+	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:id="@+id/activity_bluetooth_connect"
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools"
@@ -10,6 +11,25 @@
 	android:paddingRight="@dimen/activity_horizontal_margin"
 	android:paddingTop="@dimen/activity_vertical_margin"
 	tools:context="com.example.matu.kobu_prototype.BluetoothConnectActivity">
+
+	<android.support.design.widget.FloatingActionButton
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:clickable="true"
+		app:fabSize="mini"
+		app:srcCompat="@android:drawable/ic_menu_search"
+		android:id="@+id/start_search_button"
+		android:layout_alignParentRight="true"
+		android:layout_alignParentBottom="true"
+		app:backgroundTint="?attr/colorPrimary"/>
+
+	<ProgressBar
+		style="?android:attr/progressBarStyle"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:id="@+id/search_progress"
+		android:layout_centerInParent="true"
+		android:visibility="gone"/>
 
 	<LinearLayout
 		android:orientation="vertical"
@@ -22,12 +42,10 @@
 			android:layout_weight="11"
 			android:id="@+id/connect_able_list_view"/>
 
-		<Button
-			android:text="@string/start_search"
+		<Space
 			android:layout_width="match_parent"
 			android:layout_height="0dip"
-			android:layout_weight="1"
-			android:id="@+id/start_search_button"/>
+			android:layout_weight="1"/>
 
 	</LinearLayout>
 
