--- a/Kobu_prototype/app/src/main/res/layout/fragment_bluetooth_connect.xml
+++ b/Kobu_prototype/app/src/main/res/layout/fragment_bluetooth_connect.xml
@@ -3,14 +3,12 @@
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:id="@+id/activity_bluetooth_connect"
 	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:paddingBottom="@dimen/activity_vertical_margin"
 	android:paddingLeft="@dimen/activity_horizontal_margin"
 	android:paddingRight="@dimen/activity_horizontal_margin"
-	android:paddingTop="@dimen/activity_vertical_margin"
-	tools:context="com.example.matu.kobu_prototype.BluetoothConnectActivity">
+	android:paddingTop="@dimen/activity_vertical_margin">
 
 	<android.support.design.widget.FloatingActionButton
 		android:layout_width="wrap_content"
